added images to index.hgml

--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -19,7 +19,7 @@
 
     <section id="welcome">
         <header>
-            <img src="" alt="Max - The Auther Of This Blog">
+            <img src="{% static "blog/images/Happy-Person-Free-Download-PNG.png" %}" alt="Max - The Auther Of This Blog">
             <h2>MAX'S BLOG</h2>
         </header>
         <p>Hi, I am Max and I love to blog about tech and the world!</p>
@@ -32,7 +32,7 @@
             <li>
                 <article class="post">
                     <a href="">
-                        <img src="" alt="Mountain Hiking">
+                        <img src="{% static "blog/images/png-clipart-beautiful-desert-beautiful-desert-image-vast-desert.png" %}" alt="Mountain Hiking">
                         <div class="post__content">
                             <h3>Mountain Hiking</h3>
                             <p>There's nothing like the views you 
