--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -2,41 +2,26 @@
 {% load static %}
 
 {% block title%}
-    This Post Title
+    {{ post.title }}
 {% endblock%}
 
 {% block css_files %}
     <link rel="stylesheet" href="{% static "blog/post-detail.css" %}">
 {% endblock %}
 
-{% block content%}
+{% block content %}
     <section id="summary">
-        <h2>Post Title</h2>
+        <h2>{{ post.title }}</h2>
         <article>
-            <img src="{% static "blog/images/png-clipart-beautiful-desert-beautiful-desert-image-vast-desert.png" %}" alt="Post Title">
-            <address>By Max</address>
+            <img src="{% static "blog/images/"|add:post.image %}" alt="{{ post.title }}">
+            <address>By {{ post.author }}</address>
             <div>
-                Last updated on <time>July 10th</time>
+                Last updated on <time>{{ post.date|date:"d M Y" }}</time>
             </div>
         </article>
     </section>
 
     <main>
-        <p>
-            Hy man lkjas irhk ifhaml jksld lsajdjfh
-            alskjdf ihpw sdladi h lasjldkjfh
-        </p>
-        <p>
-            Hy man lkjas irhk ifhaml jksld lsajdjfh
-            alskjdf ihpw sdladi h lasjldkjfh
-        </p>
-        <p>
-            Hy man lkjas irhk ifhaml jksld lsajdjfh
-            alskjdf ihpw sdladi h lasjldkjfh
-        </p>
-        <p>
-            Hy man lkjas irhk ifhaml jksld lsajdjfh
-            alskjdf ihpw sdladi h lasjldkjfh
-        </p>
+        {{ post.content|linebreaks }}
     </main>
 {% endblock %}
