--- a/my_site/blog/static/blog/post-detail.css
+++ b/my_site/blog/static/blog/post-detail.css
@@ -47,6 +47,11 @@ body {
   font-weight: bold;
 }
 
+#summary a {
+  color: white;
+  text-decoration: none;
+}
+
 #summary time {
   font-weight: bold;
 }
@@ -60,3 +65,4 @@ main {
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 }
+
