--- a/my_site/blog/templates/blog/includes/post.html
+++ b/my_site/blog/templates/blog/includes/post.html
@@ -3,7 +3,8 @@
 <li>
     <article class="post">
         <a href="{% url "post-detail-page" post.slug %}">
-            <img src="{% static "blog/images/"|add:post.image %}" alt="{{ post.title }}">
+            <!-- Todo add imagename -->
+            <img src="{% static "blog/images/" %}" alt="{{ post.title }}">
             <div class="post__content">
                 <h3>{{ post.title }}</h3>
                 <p>
