--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -18,8 +18,7 @@
             {% endfor %}
         </div>
         <article>
-            <!-- Todo add imagename -->
-            <img src="{% static "blog/images/" %}" alt="{{ post.title }}">
+            <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}"/>
             <address>By <a href="mailto:{{ post.author_email_address }}">{{ post.author }}</a></address>
             <div>
                 Last updated on <time>{{ post.date|date:"d M Y" }}</time>
