--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -25,7 +25,7 @@
         <h2>My Latest Thoughts</h2>
 
         <ul>
-            {% for post in posts %}
+            {% for post in post_list %}
                 {% include "blog/includes/post.html"%}
             {% endfor %}
         </ul>
