--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -6,19 +6,19 @@
 {% endblock%}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static "blog/post-detail.css" %}">
+    <link rel="stylesheet" href="{% static "blog/post-detail.css" %}" />
 {% endblock %}
 
 {% block content %}
     <section id="summary">
         <h2>{{ post.title }}</h2>
         <div>
-            {% for tag in post_tags %}
+            {% for tag in tags %}
                 <span class="tag">{{ tag.caption }}</span>
             {% endfor %}
         </div>
         <article>
-            <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}"/>
+            <img src="{{ post.image.url }}" alt="{{ post.title }}"/>
             <address>By <a href="mailto:{{ post.author_email_address }}">{{ post.author }}</a></address>
             <div>
                 Last updated on <time>{{ post.date|date:"d M Y" }}</time>
@@ -29,4 +29,18 @@
     <main>
         {{ post.content|linebreaks }}
     </main>
+
+    <section class="comment-form">
+      <h2>Your Comment</h2>
+      <form>
+        {% for form_field in comment_form %}
+          <div class="form-control">
+            {{ form_field.label_tag }}
+            {{ form_field }}
+            {{ form_field.errors }}
+          </div>
+        {% endfor %}
+        <button>Save Comment</button>
+      </form>
+    </section>
 {% endblock %}
