--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -10,12 +10,35 @@
 {% endblock %}
 
 {% block content %}
+
+    {% if comment_form.errors %}
+        <div id="error-box">
+            <h2>Saving the comment failed!</h2>
+            <p>Please check the comment form below the post and fix you errors.</p>
+            <a href=".comment-form">Fix!</a>
+        </div>
+    {% endif %}
+
     <section id="summary">
         <h2>{{ post.title }}</h2>
         <div>
             {% for tag in tags %}
                 <span class="tag">{{ tag.caption }}</span>
             {% endfor %}
+        </div>
+        <!-- Todo anki -->
+        <div id="read-later">
+            <form action="{% url "read-later" %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" value="{{ post.id }}" name="post_id">
+                <button>
+                    {% if saved_for_later %}
+                        Remove from "Read Later list"
+                    {% else %}
+                        Read Later
+                    {% endif %}
+                </button>
+            </form>
         </div>
         <article>
             <img src="{{ post.image.url }}" alt="{{ post.title }}"/>
@@ -30,11 +53,21 @@
         {{ post.content|linebreaks }}
     </main>
 
+    <section id="comments">
+        <ul>
+            {% for comment in comments %}
+                <h2>{{ comment.user_name }}</h2>
+                <p>{{ comment.text|linebreaks }}</p>
+            {% endfor %}
+        </ul>
+    </section>
+
     <section class="comment-form">
       <h2>Your Comment</h2>
-      <form>
+      <form action="{% url "post-detail-page" post.slug %}" method="post">
+        {% csrf_token %}
         {% for form_field in comment_form %}
-          <div class="form-control">
+          <div class="form-control {% if form_field.errors %} Invalid {% endif %}">
             {{ form_field.label_tag }}
             {{ form_field }}
             {{ form_field.errors }}
